--- a/index.html
+++ b/index.html
@@ -2,35 +2,44 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <style>
 body {
     background: #f5f5f5;
     padding: 30px;
     font-family: Arial, sans-serif;
 }
-
 .container {
     background: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
     margin: auto;
-    width: 60%;
+    width: 70%;
 }
-
 h2 {
   color: #4285F4;
 }
-
 p {
   color: #666;
 }
-
+#print-button {
+  background-color: #4285F4;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px 2px;
+  cursor: pointer;
+}
 </style>
 </head>
 <body>
 <div class="container">
-    <h2><img src='https://raw.githubusercontent.com/nwpistols/pfs/d04c6d97bb2d1133dca80b557ce7aac5993f0ca0/artboard.png' alt='AI Note Consulting logo' height='32px' style='margin-bottom: 10px'> Biz Pre-Qual Checklist</h2>
+    <h2>Biz Pre-Qual Checklist</h2>
     <ol>
         <li><strong>Personal Financial Statement (PFS):</strong> Provide an up-to-date record of your financial position. This should detail your assets, liabilities, real estate holdings, and investments.</li>
         <li><strong>Credit Report:</strong> Obtain your most recent credit report. A strong credit score is essential to demonstrate your financial responsibility.</li>
@@ -41,8 +50,9 @@ p {
         <li><strong>References:</strong> Prepare a list of personal and professional references who can vouch for your character, reliability, and financial stability.</li>
         <li><strong>Statement of Intent or Interest:</strong> Write a brief description outlining your intentions and motivations for buying a business. This statement should convey your serious intent about the purchase.</li>
         <li><strong>Deal Summary:</strong> Summarize the type of deal you're interested in, including industry, size of business, your role post-acquisition, and general terms you would consider.</li>
-     </ol>
+    </ol>
     <p>Remember to regularly update these documents to ensure a smoother qualification process when you're ready to move forward with a business purchase.</p>
+   <button id="print-button" onclick="window.print()">Print this page <i class="fas fa-print"></i></button>
 </div>
 <script src="https://cloud.openchat.so/chat.js"></script>
 <script>
